namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-parom-service-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-parom-service-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ndelius_service_team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps-parom-notifications"
    cloud-platform.justice.gov.uk/application: "HMPPS Parom Service"
    cloud-platform.justice.gov.uk/owner: "National Delius Service Team / Unilink <hmpps-unilink-delius@digital.justice.gov.uk>"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-parom-service-ui"
    cloud-platform.justice.gov.uk/team-name: "unilink"
